[fix] remove the pbreak extend in texts scss and move it to utilities. remove it from the ol and ul element, was causing too much issues

--- a/src/core/scss/partials/_texts.scss
+++ b/src/core/scss/partials/_texts.scss
@@ -21,7 +21,7 @@ a{
 
 ul,
 ol,
-p{margin-bottom: 1em; margin-top: 0; @extend .pbreak; }
+p{margin-bottom: 1em; margin-top: 0;}
 
 .txt-limit p, 
 .txt-limit ul, 
