--- a/src/core/scss/partials/_utilities.scss
+++ b/src/core/scss/partials/_utilities.scss
@@ -44,6 +44,7 @@ html.no-scroll{ height: 100vh; overflow: hidden;
   p:before,
   &:before{content: none;}
 }
+p{@extend .pbreak;}
 
 .pos-relative{position: relative;}
 
